Run the daemon with some more heap and perm gen space.